#+TITLE: Changelog

* Unreleased


** Updated
- dev: megalinter v8.1.0 supports Grafana dashboards in flavors

* 2024-09-09
** Added
- dev: megalinter-upgrade task to upgrade config
- dev: megalinter grafana dashboard connections via github organization secrets

** Updated
   - dev: update megalinter config to version 8
   - dev: update to clj-kondo 2024.08.29 in quality-checks workflow
   - lib: practicalli project templates release 2024-09-09
   - Update library versions using `make outdated`

   | :name                                   | :current  | :latest |
   |----------------------------------------|-----------|-----------|
   | cider/cider-nrepl                       | 0.49.2     | 0.50.2   |
   | com.github.flow-storm/clojure           | 1.11.4     | 1.12.0   |
   | com.github.flow-storm/flow-storm-dbg    | 3.16.0     | 3.17.3   |
   | com.github.liquidz/antq                 | 2.8.1206   | 2.9.1227 |
   | com.github.seancorfield/clj-new         | 1.2.404    | 1.3.415  |
   | com.h2database/h2                       | 2.3.230    | 2.3.232  |
   | djblue/portal                           | 0.57.1     | 0.57.3   |
   | io.github.seancorfield/deps-new         | v0.7.1     | v0.8.0   |
   | nrepl/nrepl                             | 1.2.0      | 1.3.0    |
   | org.slf4j/slf4j-nop                     | 2.0.13     | 2.0.16   |

* 2024-08-04
** Updated
   - dev: quality check library update clj-kondo/clj-kondo 2024.08.01
   - Update library versions using `make outdated`

   | :name                                    | :current                                 | :latest                                  |
   +------------------------------------------+------------------------------------------+------------------------------------------|
   | cider/cider-nrepl                        | 0.49.1                                   | 0.49.2                                   |