@@ -1,0 +1,27 @@
+# ----------------------------------------
+# Base URL or website root directory to check relative URLs.
+base = "https://github.com/practicalli/clojure-cli-config/"
+
+# Only test links with the given schemes (e.g. https).
+# Omit to check links with any other scheme.
+# At the moment, we support http, https, file, and mailto.
+scheme = ["https"]
+
+# ----------------------------------------
+# Exclusions
+
+# Exclude URLs and mail addresses from checking (supports regex).
+exclude = ['^https://localhost',
+           '^https://127.0.0.0']
+
+# Exclude these filesystem paths from getting checked.
+exclude_path = ["mkdocs.yml", "overrides", "includes", ".github", ".git"]
+
+# Exclude all private IPs from checking.
+# Equivalent to setting `exclude_private`, `exclude_link_local`, and
+# `exclude_loopback` to true.
+exclude_all_private = true
+
+# Check mail addresses
+include_mail = false
+# ----------------------------------------
